# vem

./: .pre-commit-config.yaml  LICENSE.txt  pyproject.toml  vem.py
src/: vem.py
