[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vem"
authors = [
    {name = "Richard Si", email = "sichard26@gmail.com"}
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Private :: Do Not Upload",
]
license = {file = "LICENSE.txt"}

requires-python = ">=3.9"
dependencies = [
    "click >= 8.0.0",
    "click-aliases",
    "platformdirs",
    "questionary",
]

dynamic = ["version", "description"]

[project.scripts]
vem = "vem:main"

[project.urls]
Repository = "https://github.com/ichard26/vem"

[tool.isort]
profile = "black"
line_length = 100
